--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
+		"checkJs": true,
 		"baseUrl": ".",
+		"noImplicitAny": true,
 		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"]
+			"@components/*": ["src/components/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
+	"include": ["./src/**/*.d.ts", "./src/**/*.js", "./src/**/*.svelte"]
 }
