--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "~TODO~",
-  "version": "0.0.1",
+  "name": "svelte-app",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "watch:tailwind" : "postcss public/tailwind.css -o public/index.css -w",
+    "build:tailwind" : "NODE_ENV=production postcss public/tailwind.css -o public/index.css",
+    "build": "npm run build:tailwind && rollup -c",
+    "start:dev" : "sirv public --dev",
+    "autobuild" : "rollup -c -w",
+    "dev": "run-p start:dev autobuild watch:tailwind",
+    "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "autoprefixer": "^10.3.1",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
     "tailwindcss": "^2.2.4"
   },
-  "type": "module"
+  "dependencies": {
+    "sirv-cli": "^1.0.0"
+  }
 }
