--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "watch:tailwind" : "postcss public/tailwind.css -o public/index.css -w",
-    "build:tailwind" : "NODE_ENV=production postcss public/tailwind.css -o public/index.css",
+    "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
+    "build:tailwind": "NODE_ENV=production postcss public/tailwind.css -o public/index.css",
     "build": "npm run build:tailwind && rollup -c",
-    "start:dev" : "sirv public --dev",
-    "autobuild" : "rollup -c -w",
+    "start:dev": "sirv public --dev",
+    "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild watch:tailwind",
     "start": "sirv public --no-clear"
   },
@@ -28,6 +28,8 @@
     "tailwindcss": "^2.2.4"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-markdown": "^0.1.10",
+    "svelte-spa-router": "^3.2.0"
   }
 }
