--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,6 +12,8 @@
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-select-2": "^2.0.11",
     "react-syntax-highlighter": "^15.4.3",
     "remark-gfm": "^1.0.0",
     "web-vitals": "^1.1.2"
