add lessons and move routes to root folder

--- a/golang-backend/src/courses/.env
+++ b/golang-backend/src/courses/.env
@@ -3,3 +3,5 @@ COURSE_POSTGRES_PORT=10100
 COURSE_POSTGRES_USER=course-user
 COURSE_POSTGRES_PASS=course-pass
 COURSE_POSTGRES_DBNAME=course-services
+
+APP_PORT=4000
